@@ -16,8 +16,12 @@
   ~ express or implied.
   ~ See the Licence for the specific language governing
   ~ permissions and limitations under the Licence.
-  --><weblogic-web-app xmlns="http://xmlns.oracle.com/weblogic/weblogic-web-app" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.oracle.com/weblogic/weblogic-web-app http://xmlns.oracle.com/weblogic/weblogic-web-app/1.4/weblogic-web-app.xsd">
-    <context-root>domibus-MSH</context-root>
+  -->
+
+<weblogic-web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                  xmlns="http://xmlns.oracle.com/weblogic/weblogic-web-app"
+                  xsi:schemaLocation="http://xmlns.oracle.com/weblogic/weblogic-web-app http://xmlns.oracle.com/weblogic/weblogic-web-app/1.4/weblogic-web-app.xsd">
+    <context-root>/domibus-weblogic</context-root>
     <container-descriptor>
         <prefer-application-packages>
             <package-name>org.codehaus.stax2.*</package-name>
